--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -16,12 +16,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-
-      - name: Install yarn
-        run: npm install -g yarn
         
       - name: Install Dependencies
-        run: yarn install
+        run: npm install
       
       - name: Build Project
         run: npx nx run react-trrack-example:build --prod
