--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -16,9 +16,12 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
+
+      - name: Install yarn
+        run: npm install -g yarn
         
       - name: Install Dependencies
-        run: npm install
+        run: yarn install
       
       - name: Build Project
         run: npx nx run react-trrack-example:build --prod
