--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -22,6 +22,12 @@ jobs:
         
       - name: Install Dependencies
         run: yarn install
+
+      - name: Fix nx?
+        run: nx migrate 15.6.2
+
+      - name: Install again
+        run: yarn install
       
       - name: Build Project
         run: npx nx run react-trrack-example:build --prod
