--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -33,7 +33,7 @@ jobs:
         run: yarn install
       
       - name: Build Project
-        run: npx nx run react-trrack-example:build --prod
+        run: npx nx run react-trrack-example:build --prod --skip-nx-cache
       
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
